--- a/app/src/main/res/layout-land/form_fragment.xml
+++ b/app/src/main/res/layout-land/form_fragment.xml
@@ -6,13 +6,12 @@
         xmlns:tools="http://schemas.android.com/tools">
 
     <androidx.appcompat.widget.AppCompatImageView
-            android:layout_width="match_parent"
+            android:layout_width="256dp"
             android:layout_height="256dp"
             tools:src="@mipmap/ic_launcher_round"
             android:scaleType="centerCrop"
             android:layout_margin="8dp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
             android:id="@+id/thumbnail" android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"/>
 
     <androidx.appcompat.widget.AppCompatImageView
@@ -31,10 +30,9 @@
             android:layout_margin="8dp"
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginEnd="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/thumbnail"
-            app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="8dp" android:id="@+id/textInputLayout" android:layout_marginBottom="8dp"
-            app:layout_constraintBottom_toTopOf="@+id/save_button">
+            android:layout_marginStart="8dp" android:id="@+id/textInputLayout"
+            app:layout_constraintStart_toEndOf="@+id/thumbnail"
+            tools:layout_editor_absoluteY="8dp">
 
         <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/rekord_title"
@@ -55,6 +53,7 @@
             android:drawableTint="@color/colorAccent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"/>
-        
+            app:layout_constraintStart_toEndOf="@+id/thumbnail" android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/textInputLayout"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
