--- a/app/src/main/res/layout/form_fragment.xml
+++ b/app/src/main/res/layout/form_fragment.xml
@@ -33,8 +33,8 @@
             android:layout_marginEnd="8dp"
             app:layout_constraintTop_toBottomOf="@+id/thumbnail"
             app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="8dp" android:id="@+id/textInputLayout" android:layout_marginBottom="8dp"
-            app:layout_constraintBottom_toTopOf="@+id/save_button">
+            android:layout_marginStart="8dp" android:id="@+id/textInputLayout"
+    >
 
         <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/rekord_title"
@@ -53,8 +53,8 @@
             android:textColor="@color/colorAccent"
             android:drawableStart="@drawable/content_save"
             android:drawableTint="@color/colorAccent"
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"/>
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/textInputLayout"/>
         
 </androidx.constraintlayout.widget.ConstraintLayout>
