--- a/app/src/main/res/layout-land/form_fragment.xml
+++ b/app/src/main/res/layout-land/form_fragment.xml
@@ -32,7 +32,7 @@
             android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp" android:id="@+id/textInputLayout"
             app:layout_constraintStart_toEndOf="@+id/thumbnail"
-            tools:layout_editor_absoluteY="8dp">
+            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent">
 
         <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/rekord_title"
