--- a/app/src/main/res/layout/form_fragment.xml
+++ b/app/src/main/res/layout/form_fragment.xml
@@ -40,6 +40,8 @@
                 android:id="@+id/rekord_title"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:inputType="text"
+                android:maxLines="1"
                 android:hint="@string/title">
         </com.google.android.material.textfield.TextInputEditText>
     </com.google.android.material.textfield.TextInputLayout>
@@ -55,6 +57,7 @@
             android:drawableTint="@color/colorAccent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/textInputLayout"/>
+            app:layout_constraintTop_toBottomOf="@+id/textInputLayout" android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toBottomOf="parent"/>
         
 </androidx.constraintlayout.widget.ConstraintLayout>
